# mechatronicuml-backup

./: .project  README.md  pom.xml
APE/: .project  pom.xml
BundleJob/: .project  plugin.xml  pom.xml
CAdapter4ComponentContainer/: pom.xml
CAdapter4ComponentType/: pom.xml
CodegenAllocation/: pom.xml
ComponentBehaviorSynthesis/: pom.xml
ComponentType/: pom.xml
ContainerCodegen/: pom.xml
Core/: pom.xml
DevelopmentTools/: .project  PropertiesCheck.java  SetPropertiesToDefault.java  SetPropertiesToDefault.sh  jenkins_pre_build.sh  maven_pre_build.sh
EMM/: pom.xml
EloquentAdapter/: .project  pom.xml
Example/: pom.xml
Example/inProgress/org.muml.example.productionBroker/src-gen-container/broker/operations/: CMakeLists.txt  Dockerfile  Dockerfile-integration-test  Readme.md  databaseConnector.c  databaseConnector.h  databaseConnector_test.c  databaseIntegrationTest.c  databaseOperationsOpRep.c  databaseOperationsOpRep.h  entrypoint.sh
ExternalDependencies/: pom.xml
GraphvizAdapter/: pom.xml
ImplicitCopy/: pom.xml
LinesOfCodeCounter/: .project
MUML4Automation/: .project
MUMLUtilities/: PropertiesCheck.java  jenkins_pre_build.sh
ModelCopy/: pom.xml
OntologyModeling/: pom.xml
PlatformIndependentModeling/: pom.xml
PlatformModeling/: .project  pom.xml
PlatformSpecificModeling/: pom.xml
ReconfigurationModeling/: pom.xml
SimulinkAdapter/: README.txt
StoryDiagram/: pom.xml
TestLanguage/: pom.xml
UDBM/: pom.xml
UpdateSite/: pom.xml
Uppaal/: pom.xml
UppaalAdapter/: pom.xml
VerificationCore/: pom.xml
(+54481 files in other folders)
