cmake_minimum_required ( VERSION 3.0)
project(operations)
enable_testing()
set(CMAKE_C_FLAGS " -Wall -Werror -Wpedantic -std=c11")
include_directories ("${PROJECT_SOURCE_DIR}/lib/" "${PROJECT_SOURCE_DIR}")
add_executable(databaseConnector_test databaseConnector_test.c lib/cJSON.c)
set(CURL_LIBRARY "-lcurl")
find_package (CURL REQUIRED)
if(CURL_FOUND)
 include_directories(${CURL_INCLUDE_DIRS})
 target_link_libraries (databaseConnector_test cmocka ${CURL_LIBRARIES} m)
endif(CURL_FOUND)
add_test(databaseConnector_test databaseConnector_test)

