cmake_minimum_required ( VERSION 3.0)
project(operations)
enable_testing()
include(CheckLibraryExists)
CHECK_LIBRARY_EXISTS(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME)
add_definitions(-DC99 -D_POSIX_C_SOURCE=199309L)
set(CMAKE_C_FLAGS " -Wall -Werror -Wpedantic -std=c99")
include_directories ("${PROJECT_SOURCE_DIR}/lib/" "${PROJECT_SOURCE_DIR}")
add_executable(databaseConnector_test databaseConnector_test.c lib/cJSON.c databaseConnector.c)
set(CURL_LIBRARY "-lcurl")
find_package (CURL REQUIRED)
if(CURL_FOUND)
 include_directories(${CURL_INCLUDE_DIRS})
 target_link_libraries (databaseConnector_test cmocka ${CURL_LIBRARIES} m pthread dl nsl rt)
endif(CURL_FOUND)
add_test(databaseConnector_test databaseConnector_test)

